add sources.jar and sources-test.jar